examples/errors/panic/main.lc

function main() {
    a();
}

function a() {
    b();
}

function b() {
    c();
}

function c() {
    panic("panic");
}
